--- a/views/me/HomePage.html
+++ b/views/me/HomePage.html
@@ -2,14 +2,14 @@
 	<ion-item class="item-icon-left item-icon-right" ng-click="navAction(0)" ng-if="!user">
 		<i class="icon ion-android-contact"></i>
 		<b>登录</b>
-		<span class="item-note">立刻登录</span>
+		<span class="item-note">立刻登录11111111111</span>
 		<u class="icon ion-ios-arrow-right"></u>
 	</ion-item>
 	<ion-item class="item-icon-left item-icon-right" ng-click="navAction(8)" ng-if="user">
 		<i class="icon ion-android-contact"></i>
 		<div>
 			<span>{{usernameList[user].nickname}}</span>
-			<p>美柚账号登录</p>
+			<p>美柚账号登录11111111111111111</p>
 		</div>
 		<u class="icon ion-ios-arrow-right"></u>
 	</ion-item>
