--- a/views/me/HomePage.html
+++ b/views/me/HomePage.html
@@ -2,7 +2,7 @@
 	<ion-item class="item-icon-left item-icon-right" ng-click="navAction(0)" ng-if="!user">
 		<i class="icon ion-android-contact"></i>
 		<b>登录</b>
-		<span class="item-note">立刻登录11111111111</span>
+		<span class="item-note">立马sign in</span>
 		<u class="icon ion-ios-arrow-right"></u>
 	</ion-item>
 	<ion-item class="item-icon-left item-icon-right" ng-click="navAction(8)" ng-if="user">
